Hw2/y.output
   0  $accept : program $end

   1  program : def_or_dec_multiple

   2  def_or_dec_multiple : def_or_dec_multiple definition_or_declaration
   3                      | definition_or_declaration

   4  definition_or_declaration : definition_option
   5                            | declaration_option

   6  definition_option : function_definition

   7  declaration_option : scalar_declaration
   8                     | array_declaration
   9                     | function_declaration

  10  scalar_declaration : type idents SEMI_COLON

  11  type : first_opt

  12  first_opt : CONST second_opt
  13            | second_opt
  14            | CONST

  15  second_opt : SIGNED third_opt
  16             | UNSIGNED third_opt
  17             | TYPE_FLOAT third_opt
  18             | TYPE_DOUBLE third_opt
  19             | VOID third_opt
  20             | SIGNED
  21             | UNSIGNED
  22             | TYPE_FLOAT
  23             | TYPE_DOUBLE
  24             | VOID
  25             | third_opt

  26  third_opt : LONG_LONG
  27            | LONG
  28            | SHORT
  29            | LONG_LONG TYPE_INT
  30            | LONG TYPE_INT
  31            | SHORT TYPE_INT
  32            | TYPE_CHAR
  33            | TYPE_INT

  34  idents : idents COMMA ident_single
  35         | ident_single

  36  ident_single : IDENT
  37               | IDENT ASSIGN expr
  38               | STAR_SYMBOL IDENT
  39               | STAR_SYMBOL IDENT ASSIGN expr

  40  array_declaration : type array_multiple SEMI_COLON

  41  array_multiple : array_multiple COMMA array_single
  42                 | array_single

  43  array_single : IDENT array_dimensions
  44               | IDENT array_dimensions ASSIGN L_BRACKET array_content R_BRACKET

  45  array_dimensions : L_SQUARE expr R_SQUARE array_dimensions
  46                   | L_SQUARE expr R_SQUARE

  47  array_content : L_BRACKET array_content R_BRACKET
  48                | array_content COMMA L_BRACKET array_content R_BRACKET
  49                | array_content COMMA expr
  50                | expr

  51  function_declaration : type IDENT L_PAREN function_parameters R_PAREN SEMI_COLON
  52                       | type STAR_SYMBOL IDENT L_PAREN function_parameters R_PAREN SEMI_COLON

  53  function_definition : type IDENT L_PAREN function_parameters R_PAREN statement_compound
  54                      | type STAR_SYMBOL IDENT L_PAREN function_parameters R_PAREN statement_compound

  55  function_parameters : function_parameters COMMA type ident_single
  56                      | type ident_single
  57                      |

  58  function_call_argus : function_call_argus COMMA expr
  59                      | expr

  60  expr : expr_assign
  61       |

  62  expr_assign : expr_logicOR ASSIGN expr_assign
  63              | expr_logicOR

  64  expr_logicOR : expr_logicOR LOGIC_OR expr_logicAND
  65               | expr_logicAND

  66  expr_logicAND : expr_logicAND LOGIC_AND expr_bitwiseOR
  67                | expr_bitwiseOR

  68  expr_bitwiseOR : expr_bitwiseOR BITWISE_OR expr_bitwiseXOR
  69                 | expr_bitwiseXOR

  70  expr_bitwiseXOR : expr_bitwiseXOR BITWISE_XOR expr_bitwiseAND
  71                  | expr_bitwiseAND

  72  expr_bitwiseAND : expr_bitwiseAND AND_SYMBOL expr_isequal
  73                  | expr_isequal

  74  expr_isequal : expr_isequal EQUAL expr_compare
  75               | expr_isequal NOT_EQUAL expr_compare
  76               | expr_compare

  77  expr_compare : expr_compare LESS expr_shift
  78               | expr_compare LESS_EQUAL expr_shift
  79               | expr_compare GREATER expr_shift
  80               | expr_compare GREATER_EQUAL expr_shift
  81               | expr_shift

  82  expr_shift : expr_shift SHIFT_LEFT expr_add_sub
  83             | expr_shift SHIFT_RIGHT expr_add_sub
  84             | expr_add_sub

  85  expr_add_sub : expr_add_sub PLUS_SYMBOL expr_mul_div_mod
  86               | expr_add_sub MINUS_SYMBOL expr_mul_div_mod
  87               | expr_mul_div_mod

  88  expr_mul_div_mod : expr_mul_div_mod STAR_SYMBOL expr_second
  89                   | expr_mul_div_mod DIV expr_second
  90                   | expr_mul_div_mod MOD expr_second
  91                   | expr_second

  92  expr_second : AND_SYMBOL expr_second
  93              | STAR_SYMBOL expr_second
  94              | L_PAREN type R_PAREN expr_second
  95              | L_PAREN type STAR_SYMBOL R_PAREN expr_second
  96              | LOGIC_NOT expr_second
  97              | BITWISE_NOT expr_second
  98              | PLUS_SYMBOL expr_second
  99              | MINUS_SYMBOL expr_second
 100              | INCREMENT expr_second
 101              | DECREMENT expr_second
 102              | expr_first

 103  expr_first : IDENT array_dimensions
 104             | expr_first L_PAREN function_call_argus R_PAREN
 105             | L_PAREN expr R_PAREN
 106             | expr_first INCREMENT
 107             | expr_first DECREMENT
 108             | IDENT
 109             | literal

 110  literal : INT
 111          | FLOAT
 112          | CHAR
 113          | STRING
 114          | NULL_VAL

 115  statement_compound : L_BRACKET dec_or_state_multiple R_BRACKET
 116                     | L_BRACKET R_BRACKET

 117  dec_or_state_multiple : dec_or_state_multiple declaration_or_statement
 118                        | declaration_or_statement

 119  declaration_or_statement : declaration_option
 120                           | statement_option

 121  statement_option : statement_expr
 122                   | statement_if
 123                   | statement_switch
 124                   | statement_while
 125                   | statement_for
 126                   | statement_break
 127                   | statement_return
 128                   | statement_continue
 129                   | statement_compound

 130  statement_expr : expr SEMI_COLON

 131  statement_if : IF L_PAREN expr R_PAREN statement_compound
 132               | IF L_PAREN expr R_PAREN statement_compound ELSE statement_compound

 133  statement_switch : SWITCH L_PAREN expr R_PAREN L_BRACKET statement_clause_multiple R_BRACKET
 134                   | SWITCH L_PAREN expr R_PAREN L_BRACKET R_BRACKET

 135  statement_clause_multiple : statement_clause_multiple statement_clause
 136                            | statement_clause

 137  statement_clause : statement_case
 138                   | statement_default

 139  statement_case : CASE expr COLON statement_multiple
 140                 | CASE expr COLON

 141  statement_default : DEFAULT COLON statement_multiple
 142                    | DEFAULT COLON

 143  statement_multiple : statement_multiple statement_option
 144                     | statement_option

 145  statement_while : WHILE L_PAREN expr R_PAREN statement_option
 146                  | DO statement_option WHILE L_PAREN expr R_PAREN SEMI_COLON

 147  statement_for : FOR L_PAREN expr SEMI_COLON expr SEMI_COLON expr R_PAREN statement_option

 148  statement_return : RETURN expr SEMI_COLON

 149  statement_break : BREAK SEMI_COLON

 150  statement_continue : CONTINUE SEMI_COLON

state 0
	$accept : . program $end  (0)

	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	TYPE_FLOAT  shift 3
	TYPE_DOUBLE  shift 4
	CONST  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	VOID  shift 11
	.  error

	program  goto 12
	def_or_dec_multiple  goto 13
	definition_or_declaration  goto 14
	definition_option  goto 15
	declaration_option  goto 16
	type  goto 17
	first_opt  goto 18
	second_opt  goto 19
	third_opt  goto 20
	scalar_declaration  goto 21
	array_declaration  goto 22
	function_declaration  goto 23
	function_definition  goto 24


state 1
	third_opt : TYPE_INT .  (33)

	.  reduce 33


state 2
	third_opt : TYPE_CHAR .  (32)

	.  reduce 32


state 3
	second_opt : TYPE_FLOAT . third_opt  (17)
	second_opt : TYPE_FLOAT .  (22)

	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	IDENT  reduce 22
	R_PAREN  reduce 22
	STAR_SYMBOL  reduce 22

	third_opt  goto 25


state 4
	second_opt : TYPE_DOUBLE . third_opt  (18)
	second_opt : TYPE_DOUBLE .  (23)

	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	IDENT  reduce 23
	R_PAREN  reduce 23
	STAR_SYMBOL  reduce 23

	third_opt  goto 26


state 5
	first_opt : CONST . second_opt  (12)
	first_opt : CONST .  (14)

	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	TYPE_FLOAT  shift 3
	TYPE_DOUBLE  shift 4
	SIGNED  shift 6
	UNSIGNED  shift 7
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	VOID  shift 11
	IDENT  reduce 14
	R_PAREN  reduce 14
	STAR_SYMBOL  reduce 14

	second_opt  goto 27
	third_opt  goto 20


state 6
	second_opt : SIGNED . third_opt  (15)
	second_opt : SIGNED .  (20)

	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	IDENT  reduce 20
	R_PAREN  reduce 20
	STAR_SYMBOL  reduce 20

	third_opt  goto 28


state 7
	second_opt : UNSIGNED . third_opt  (16)
	second_opt : UNSIGNED .  (21)

	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	IDENT  reduce 21
	R_PAREN  reduce 21
	STAR_SYMBOL  reduce 21

	third_opt  goto 29


state 8
	third_opt : LONG_LONG .  (26)
	third_opt : LONG_LONG . TYPE_INT  (29)

	TYPE_INT  shift 30
	IDENT  reduce 26
	R_PAREN  reduce 26
	STAR_SYMBOL  reduce 26


state 9
	third_opt : LONG .  (27)
	third_opt : LONG . TYPE_INT  (30)

	TYPE_INT  shift 31
	IDENT  reduce 27
	R_PAREN  reduce 27
	STAR_SYMBOL  reduce 27


state 10
	third_opt : SHORT .  (28)
	third_opt : SHORT . TYPE_INT  (31)

	TYPE_INT  shift 32
	IDENT  reduce 28
	R_PAREN  reduce 28
	STAR_SYMBOL  reduce 28


state 11
	second_opt : VOID . third_opt  (19)
	second_opt : VOID .  (24)

	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	IDENT  reduce 24
	R_PAREN  reduce 24
	STAR_SYMBOL  reduce 24

	third_opt  goto 33


state 12
	$accept : program . $end  (0)

	$end  accept


state 13
	program : def_or_dec_multiple .  (1)
	def_or_dec_multiple : def_or_dec_multiple . definition_or_declaration  (2)

	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	TYPE_FLOAT  shift 3
	TYPE_DOUBLE  shift 4
	CONST  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	VOID  shift 11
	$end  reduce 1

	definition_or_declaration  goto 34
	definition_option  goto 15
	declaration_option  goto 16
	type  goto 17
	first_opt  goto 18
	second_opt  goto 19
	third_opt  goto 20
	scalar_declaration  goto 21
	array_declaration  goto 22
	function_declaration  goto 23
	function_definition  goto 24


state 14
	def_or_dec_multiple : definition_or_declaration .  (3)

	.  reduce 3


state 15
	definition_or_declaration : definition_option .  (4)

	.  reduce 4


state 16
	definition_or_declaration : declaration_option .  (5)

	.  reduce 5


state 17
	scalar_declaration : type . idents SEMI_COLON  (10)
	array_declaration : type . array_multiple SEMI_COLON  (40)
	function_declaration : type . IDENT L_PAREN function_parameters R_PAREN SEMI_COLON  (51)
	function_declaration : type . STAR_SYMBOL IDENT L_PAREN function_parameters R_PAREN SEMI_COLON  (52)
	function_definition : type . IDENT L_PAREN function_parameters R_PAREN statement_compound  (53)
	function_definition : type . STAR_SYMBOL IDENT L_PAREN function_parameters R_PAREN statement_compound  (54)

	IDENT  shift 35
	STAR_SYMBOL  shift 36
	.  error

	idents  goto 37
	ident_single  goto 38
	array_multiple  goto 39
	array_single  goto 40


state 18
	type : first_opt .  (11)

	.  reduce 11


state 19
	first_opt : second_opt .  (13)

	.  reduce 13


state 20
	second_opt : third_opt .  (25)

	.  reduce 25


state 21
	declaration_option : scalar_declaration .  (7)

	.  reduce 7


state 22
	declaration_option : array_declaration .  (8)

	.  reduce 8


state 23
	declaration_option : function_declaration .  (9)

	.  reduce 9


state 24
	definition_option : function_definition .  (6)

	.  reduce 6


state 25
	second_opt : TYPE_FLOAT third_opt .  (17)

	.  reduce 17


state 26
	second_opt : TYPE_DOUBLE third_opt .  (18)

	.  reduce 18


state 27
	first_opt : CONST second_opt .  (12)

	.  reduce 12


state 28
	second_opt : SIGNED third_opt .  (15)

	.  reduce 15


state 29
	second_opt : UNSIGNED third_opt .  (16)

	.  reduce 16


state 30
	third_opt : LONG_LONG TYPE_INT .  (29)

	.  reduce 29


state 31
	third_opt : LONG TYPE_INT .  (30)

	.  reduce 30


state 32
	third_opt : SHORT TYPE_INT .  (31)

	.  reduce 31


state 33
	second_opt : VOID third_opt .  (19)

	.  reduce 19


state 34
	def_or_dec_multiple : def_or_dec_multiple definition_or_declaration .  (2)

	.  reduce 2


state 35
	ident_single : IDENT .  (36)
	ident_single : IDENT . ASSIGN expr  (37)
	array_single : IDENT . array_dimensions  (43)
	array_single : IDENT . array_dimensions ASSIGN L_BRACKET array_content R_BRACKET  (44)
	function_declaration : type IDENT . L_PAREN function_parameters R_PAREN SEMI_COLON  (51)
	function_definition : type IDENT . L_PAREN function_parameters R_PAREN statement_compound  (53)

	ASSIGN  shift 41
	L_SQUARE  shift 42
	L_PAREN  shift 43
	COMMA  reduce 36
	SEMI_COLON  reduce 36

	array_dimensions  goto 44


state 36
	ident_single : STAR_SYMBOL . IDENT  (38)
	ident_single : STAR_SYMBOL . IDENT ASSIGN expr  (39)
	function_declaration : type STAR_SYMBOL . IDENT L_PAREN function_parameters R_PAREN SEMI_COLON  (52)
	function_definition : type STAR_SYMBOL . IDENT L_PAREN function_parameters R_PAREN statement_compound  (54)

	IDENT  shift 45
	.  error


state 37
	scalar_declaration : type idents . SEMI_COLON  (10)
	idents : idents . COMMA ident_single  (34)

	COMMA  shift 46
	SEMI_COLON  shift 47
	.  error


state 38
	idents : ident_single .  (35)

	.  reduce 35


state 39
	array_declaration : type array_multiple . SEMI_COLON  (40)
	array_multiple : array_multiple . COMMA array_single  (41)

	COMMA  shift 48
	SEMI_COLON  shift 49
	.  error


state 40
	array_multiple : array_single .  (42)

	.  reduce 42


state 41
	ident_single : IDENT ASSIGN . expr  (37)
	expr : .  (61)

	IDENT  shift 50
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 60
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	R_PAREN  reduce 61
	COMMA  reduce 61
	SEMI_COLON  reduce 61

	literal  goto 65
	expr  goto 66
	expr_assign  goto 67
	expr_logicOR  goto 68
	expr_logicAND  goto 69
	expr_bitwiseOR  goto 70
	expr_bitwiseXOR  goto 71
	expr_bitwiseAND  goto 72
	expr_isequal  goto 73
	expr_compare  goto 74
	expr_shift  goto 75
	expr_add_sub  goto 76
	expr_mul_div_mod  goto 77
	expr_second  goto 78
	expr_first  goto 79


state 42
	array_dimensions : L_SQUARE . expr R_SQUARE array_dimensions  (45)
	array_dimensions : L_SQUARE . expr R_SQUARE  (46)
	expr : .  (61)

	IDENT  shift 50
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 60
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	R_SQUARE  reduce 61

	literal  goto 65
	expr  goto 80
	expr_assign  goto 67
	expr_logicOR  goto 68
	expr_logicAND  goto 69
	expr_bitwiseOR  goto 70
	expr_bitwiseXOR  goto 71
	expr_bitwiseAND  goto 72
	expr_isequal  goto 73
	expr_compare  goto 74
	expr_shift  goto 75
	expr_add_sub  goto 76
	expr_mul_div_mod  goto 77
	expr_second  goto 78
	expr_first  goto 79


state 43
	function_declaration : type IDENT L_PAREN . function_parameters R_PAREN SEMI_COLON  (51)
	function_definition : type IDENT L_PAREN . function_parameters R_PAREN statement_compound  (53)
	function_parameters : .  (57)

	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	TYPE_FLOAT  shift 3
	TYPE_DOUBLE  shift 4
	CONST  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	VOID  shift 11
	R_PAREN  reduce 57
	COMMA  reduce 57

	type  goto 81
	first_opt  goto 18
	second_opt  goto 19
	third_opt  goto 20
	function_parameters  goto 82


state 44
	array_single : IDENT array_dimensions .  (43)
	array_single : IDENT array_dimensions . ASSIGN L_BRACKET array_content R_BRACKET  (44)

	ASSIGN  shift 83
	COMMA  reduce 43
	SEMI_COLON  reduce 43


state 45
	ident_single : STAR_SYMBOL IDENT .  (38)
	ident_single : STAR_SYMBOL IDENT . ASSIGN expr  (39)
	function_declaration : type STAR_SYMBOL IDENT . L_PAREN function_parameters R_PAREN SEMI_COLON  (52)
	function_definition : type STAR_SYMBOL IDENT . L_PAREN function_parameters R_PAREN statement_compound  (54)

	ASSIGN  shift 84
	L_PAREN  shift 85
	COMMA  reduce 38
	SEMI_COLON  reduce 38


state 46
	idents : idents COMMA . ident_single  (34)

	IDENT  shift 86
	STAR_SYMBOL  shift 87
	.  error

	ident_single  goto 88


state 47
	scalar_declaration : type idents SEMI_COLON .  (10)

	.  reduce 10


state 48
	array_multiple : array_multiple COMMA . array_single  (41)

	IDENT  shift 89
	.  error

	array_single  goto 90


state 49
	array_declaration : type array_multiple SEMI_COLON .  (40)

	.  reduce 40


state 50
	expr_first : IDENT . array_dimensions  (103)
	expr_first : IDENT .  (108)

	L_SQUARE  shift 42
	ASSIGN  reduce 108
	LOGIC_OR  reduce 108
	LOGIC_AND  reduce 108
	BITWISE_OR  reduce 108
	BITWISE_XOR  reduce 108
	EQUAL  reduce 108
	NOT_EQUAL  reduce 108
	LESS  reduce 108
	LESS_EQUAL  reduce 108
	GREATER  reduce 108
	GREATER_EQUAL  reduce 108
	SHIFT_LEFT  reduce 108
	SHIFT_RIGHT  reduce 108
	DIV  reduce 108
	MOD  reduce 108
	R_SQUARE  reduce 108
	L_PAREN  reduce 108
	R_PAREN  reduce 108
	AND_SYMBOL  reduce 108
	STAR_SYMBOL  reduce 108
	PLUS_SYMBOL  reduce 108
	MINUS_SYMBOL  reduce 108
	INCREMENT  reduce 108
	DECREMENT  reduce 108
	COMMA  reduce 108
	COLON  reduce 108
	SEMI_COLON  reduce 108
	R_BRACKET  reduce 108

	array_dimensions  goto 91


state 51
	literal : STRING .  (113)

	.  reduce 113


state 52
	literal : CHAR .  (112)

	.  reduce 112


state 53
	literal : NULL_VAL .  (114)

	.  reduce 114


state 54
	literal : INT .  (110)

	.  reduce 110


state 55
	literal : FLOAT .  (111)

	.  reduce 111


state 56
	expr_second : LOGIC_NOT . expr_second  (96)

	IDENT  shift 50
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 60
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	.  error

	literal  goto 65
	expr_second  goto 92
	expr_first  goto 79


state 57
	expr_second : BITWISE_NOT . expr_second  (97)

	IDENT  shift 50
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 60
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	.  error

	literal  goto 65
	expr_second  goto 93
	expr_first  goto 79


state 58
	expr_second : L_PAREN . type R_PAREN expr_second  (94)
	expr_second : L_PAREN . type STAR_SYMBOL R_PAREN expr_second  (95)
	expr_first : L_PAREN . expr R_PAREN  (105)
	expr : .  (61)

	IDENT  shift 50
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	TYPE_INT  shift 1
	TYPE_CHAR  shift 2
	TYPE_FLOAT  shift 3
	TYPE_DOUBLE  shift 4
	CONST  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	LONG_LONG  shift 8
	LONG  shift 9
	SHORT  shift 10
	VOID  shift 11
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 60
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	R_PAREN  reduce 61

	type  goto 94
	literal  goto 65
	first_opt  goto 18
	second_opt  goto 19
	third_opt  goto 20
	expr  goto 95
	expr_assign  goto 67
	expr_logicOR  goto 68
	expr_logicAND  goto 69
	expr_bitwiseOR  goto 70
	expr_bitwiseXOR  goto 71
	expr_bitwiseAND  goto 72
	expr_isequal  goto 73
	expr_compare  goto 74
	expr_shift  goto 75
	expr_add_sub  goto 76
	expr_mul_div_mod  goto 77
	expr_second  goto 78
	expr_first  goto 79


state 59
	expr_second : AND_SYMBOL . expr_second  (92)

	IDENT  shift 50
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 60
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	.  error

	literal  goto 65
	expr_second  goto 96
	expr_first  goto 79


state 60
	expr_second : STAR_SYMBOL . expr_second  (93)

	IDENT  shift 50
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 60
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	.  error

	literal  goto 65
	expr_second  goto 97
	expr_first  goto 79


state 61
	expr_second : PLUS_SYMBOL . expr_second  (98)

	IDENT  shift 50
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 60
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	.  error

	literal  goto 65
	expr_second  goto 98
	expr_first  goto 79


state 62
	expr_second : MINUS_SYMBOL . expr_second  (99)

	IDENT  shift 50
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 60
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	.  error

	literal  goto 65
	expr_second  goto 99
	expr_first  goto 79


state 63
	expr_second : INCREMENT . expr_second  (100)

	IDENT  shift 50
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 60
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	.  error

	literal  goto 65
	expr_second  goto 100
	expr_first  goto 79


state 64
	expr_second : DECREMENT . expr_second  (101)

	IDENT  shift 50
	STRING  shift 51
	CHAR  shift 52
	NULL_VAL  shift 53
	INT  shift 54
	FLOAT  shift 55
	LOGIC_NOT  shift 56
	BITWISE_NOT  shift 57
	L_PAREN  shift 58
	AND_SYMBOL  shift 59
	STAR_SYMBOL  shift 60
	PLUS_SYMBOL  shift 61
	MINUS_SYMBOL  shift 62
	INCREMENT  shift 63
	DECREMENT  shift 64
	.  error

	literal  goto 65
	expr_second  goto 101
	expr_first  goto 79


state 65
	expr_first : literal .  (109)

	.  reduce 109


state 66
	ident_single : IDENT ASSIGN expr .  (37)

	.  reduce 37


state 67
	expr : expr_assign .  (60)

	.  reduce 60


state 68
	expr_assign : expr_logicOR . ASSIGN expr_assign  (62)
	expr_assign : expr_logicOR .  (63)
	expr_logicOR : expr_logicOR . LOGIC_OR expr_logicAND  (64)

	ASSIGN  shift 102
	LOGIC_OR  shift 103
	R_SQUARE  reduce 63
	R_PAREN  reduce 63
	COMMA  reduce 63
	COLON  reduce 63
	SEMI_COLON  reduce 63
	R_BRACKET  reduce 63


state 69
	expr_logicOR : expr_logicAND .  (65)
	expr_logicAND : expr_logicAND . LOGIC_AND expr_bitwiseOR  (66)

	LOGIC_AND  shift 104
	ASSIGN  reduce 65
	LOGIC_OR  reduce 65
	R_SQUARE  reduce 65
	R_PAREN  reduce 65
	COMMA  reduce 65
	COLON  reduce 65
	SEMI_COLON  reduce 65
	R_BRACKET  reduce 65


state 70
	expr_logicAND : expr_bitwiseOR .  (67)
	expr_bitwiseOR : expr_bitwiseOR . BITWISE_OR expr_bitwiseXOR  (68)

	BITWISE_OR  shift 105
	ASSIGN  reduce 67
	LOGIC_OR  reduce 67
	LOGIC_AND  reduce 67
	R_SQUARE  reduce 67
	R_PAREN  reduce 67
	COMMA  reduce 67
	COLON  reduce 67
	SEMI_COLON  reduce 67
	R_BRACKET  reduce 67


state 71
	expr_bitwiseOR : expr_bitwiseXOR .  (69)
	expr_bitwiseXOR : expr_bitwiseXOR . BITWISE_XOR expr_bitwiseAND  (70)

	BITWISE_XOR  shift 106
	ASSIGN  reduce 69
	LOGIC_OR  reduce 69
	LOGIC_AND  reduce 69
	BITWISE_OR  reduce 69
	R_SQUARE  reduce 69
	R_PAREN  reduce 69
	COMMA  reduce 69
	COLON  reduce 69
	SEMI_COLON  reduce 69
	R_BRACKET  reduce 69


state 72
	expr_bitwiseXOR : expr_bitwiseAND .  (71)
	expr_bitwiseAND : expr_bitwiseAND . AND_SYMBOL expr_isequal  (72)

	AND_SYMBOL  shift 107
	ASSIGN  reduce 71
	LOGIC_OR  reduce 71
	LOGIC_AND  reduce 71
	BITWISE_OR  reduce 71
	BITWISE_XOR  reduce 71
	R_SQUARE  reduce 71
	R_PAREN  reduce 71
	COMMA  reduce 71
	COLON  reduce 71
	SEMI_COLON  reduce 71
	R_BRACKET  reduce 71


state 73
	expr_bitwiseAND : expr_isequal .  (73)
	expr_isequal : expr_isequal . EQUAL expr_compare  (74)
	expr_isequal : expr_isequal . NOT_EQUAL expr_compare  (75)

	EQUAL  shift 108
	NOT_EQUAL  shift 109
	ASSIGN  reduce 73
	LOGIC_OR  reduce 73
	LOGIC_AND  reduce 73
	BITWISE_OR  reduce 73
	BITWISE_XOR  reduce 73
	R_SQUARE  reduce 73
	R_PAREN  reduce 73
	AND_SYMBOL  reduce 73
	COMMA  reduce 73
	COLON  reduce 73
	SEMI_COLON  reduce 73
	R_BRACKET  reduce 73


state 74
	expr_isequal : expr_compare .  (76)
	expr_compare : expr_compare . LESS expr_shift  (77)
	expr_compare : expr_compare . LESS_EQUAL expr_shift  (78)
	expr_compare : expr_compare . GREATER expr_shift  (79)
	expr_compare : expr_compare . GREATER_EQUAL expr_shift  (80)
